fix(datatables): Document truncation, wrapping, line clamping in cells; support content with line breaks (#4247)

--- a/ui/components/data-tables/base/_index.scss
+++ b/ui/components/data-tables/base/_index.scss
@@ -86,7 +86,7 @@
    * @modifier
    */
   .slds-cell-wrap {
-    white-space: normal;
+    white-space: pre-line;
     overflow-wrap: break-word;
     word-wrap: break-word;
   }
